--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,4 +6,8 @@
 <title><%= title || "Dojo App" %></title>
 <!-- <link rel="stylesheet" href="/css/main.css" /> -->
 <link rel="stylesheet" href="/css/main.css?v=1.6" />
+<link rel="stylesheet" href="/css/nav-arrows.css">
+
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
