--- a/views/forms/show.ejs
+++ b/views/forms/show.ejs
@@ -5,7 +5,11 @@
     <%- include('../partials/head') %>
   </head>
   <body class="page-show">
+
     <%- include('../partials/nav') %>
+    <%- include('../partials/back-arrow') %>
+
+    
     <h1 style="text-align: center"><%= title %></h1>
 
     <table class="table">
