--- a/views/forms/trash.ejs
+++ b/views/forms/trash.ejs
@@ -5,6 +5,8 @@
   </head>
   <body class="page-index-2">
     <%- include('../partials/nav') %>
+   <%- include('../partials/back-arrow') %>
+
     <h1><%= title %></h1>
 
     <% if (!forms || forms.length === 0) { %>
