--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,6 +8,7 @@
   </head>
 
   <%- include('partials/nav') %>
+  <%- include('partials/back-arrow') %>
 
   <body class="page-new">
     <h1 class="h1-new"><%= title %></h1>
