--- a/views/forms/index2.ejs
+++ b/views/forms/index2.ejs
@@ -6,6 +6,8 @@
   </head>
   <body class="page-index-2">
     <%- include('../partials/nav') %>
+   <%- include('../partials/back-arrow') %>
+
     <h1><%= title %></h1>
 
     <%
