--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,9 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title><%= title || "Dojo App" %></title>
 <!-- <link rel="stylesheet" href="/css/main.css" /> -->
-<link rel="stylesheet" href="/css/main.css?v=1.6" />
-<link rel="stylesheet" href="/css/nav-arrows.css">
-
-
+<link rel="stylesheet" href="/css/main.css?v=1.7" />
+<link rel="stylesheet" href="/css/nav-arrows.css" />
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
