--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
   <head>
     <%- include('partials/head') %>
   </head>
-  <body class="home">
+  <body id="index-body"class="home">
     <h1 class="goju-ryu-logo">
       <span>G</span><span>O</span><span>J</span><span>U</span><span>-</span
       ><span>R</span><span>Y</span><span>U</span>
@@ -22,7 +22,7 @@
         width: 100%;
         display: flex;
         justify-content: center;
-        margin-top: 32px;
+        margin-top: 52px;
       "
     >
       <img
