--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,13 @@
 
 @font-face {
   font-family: 'Formation Sans Regular';
-  src: url('./Fonts/Formation Sans Regular.ttf') format('truetype');
-  font-weight: normal;
+  src: url('/fonts/FormationSans-Regular.woff2') format('woff2'),
+       url('/fonts/FormationSans-Regular.woff')  format('woff');
+  font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
+
 
 html, body { 
   overflow-x: hidden;
@@ -18,7 +21,7 @@ body {
 }
 
 body {
-  font-family: "Formation Sans", system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
+  font-family: 'Formation Sans Regular', Arial, sans-serif;
   line-height: 1.5;
   margin: 0;
   min-height: 100vh;
