--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,7 +21,7 @@ body {
 }
 
 body {
-  font-family: 'Formation Sans Regular', Arial, sans-serif;
+  font-family: 'Formation Sans Regular', sans-serif;
   line-height: 1.5;
   margin: 0;
   min-height: 100vh;
