--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,9 +67,9 @@ body {
   min-height: 200px;
 }
 .view-form .create-form-btn {
-  min-width: 220px;
-  padding-left: 2.8em;
-  padding-right: 2.8em;
+  min-width: 350px;
+  padding-left: 1.8em;
+  padding-right: 1.8em;
 }
 .edit-actions-row {
   display: flex;
@@ -86,6 +86,8 @@ button[type="submit"] {
   border-radius: 8px;
   font-size: 1.4rem;
   display: flex;
+  width: 550px;
+  margin: auto;
   align-items: center;
   align-content: center;
   margin-bottom: 1rem;
@@ -206,7 +208,8 @@ button[type="submit"]:hover {
 /* Add depth to home page logout button */
 .home .logout-btn {
   font-size: 1.3rem;
-  padding: 0.7rem 1.6rem;
+  padding: 0.7rem 1.1rem;
+  max-width: 150px;
   background: linear-gradient( #1c043213 20%);
   color: #4dbffdbd;
   border: 1.5px solid #0cb6e56a;
@@ -748,8 +751,16 @@ button:hover { background-color: #005f99; }
 }
 .logout-corner {
   position: absolute;
-  top: 18px;
+  top: 20px;
   right: 32px;
+  z-index: 1000;
+/* Home page logout button styles remain here */
+}
+.logout-other {
+  /* Style for logout button on all other pages */
+  position: static;
+  margin-top: 11px;
+  right: auto;
   z-index: 1000;
 }
 .logout-bottom {
